@@ -3,6 +3,9 @@ NEWS - OpenPrinting CUPS Filters v1.18.0 - 2017-12-19
 
 CHANGES IN V1.19.0
 
+	- libcupsfilters: Improvements on header of generated PPDs:
+	  use cups-filters version number, "drvless.ppd" PCFileName,
+	  APSupplies and cupsChargeInfoURI from CUPS.
 	- libcupsfilters: Let the PPD generator use the IPP string
 	  tables in the translation files of CUPS 2.3.x or newer
 	  (English strings only). Let all options in the PPD have
